--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #747bff;
 }
 
 button {
@@ -46,7 +47,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #535bf2;
   cursor: pointer;
   transition: border-color 0.25s;
 }
